# pwa-generator

./: Cargo.toml  readme.md
example/public/: index.html
src/: html_parser.rs  index.html  init.rs  main.rs  manifest.rs  pwa.rs  worker.rs
template/: worker.js
