[package]
name = "pwa-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.5", features = ["derive"] }
kuchiki = "0.8.1"
html5ever = "0.25"
serde = {version = "1.0.181", features = ["derive"]}
serde_json = "1.0"
regex = "1"
